force-app/main/default/objects/Account_Edit_Request__c/Account_Edit_Request__c.object-meta.xml
<CustomObject>
    <label>Account Edit Request</label>
    <nameField>
        <displayFormat>AER-{0000}</displayFormat>
        <label>Account Edit Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Edit Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>