force-app/main/default/objects/Account_Edit_Request__c/fields/Approve_2__c.field-meta.xml
<CustomField>
    <fullName>Approve_2__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Approve</label>
    <type>Checkbox</type>
</CustomField>