force-app/main/default/objects/Account_Edit_Request__c/fields/Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason__c</fullName>
    <label>Denial Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>