force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_APS_Dist_Method__c.field-meta.xml
<CustomField>
    <fullName>Existing_APS_Dist_Method__c</fullName>
    <formula>TEXT(Account__r.APS_Distribution_Method__c )</formula>
    <label>Existing APS Dist Method</label>
    <type>Text</type>
</CustomField>