force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_APS_Email__c.field-meta.xml
<CustomField>
    <fullName>Existing_APS_Email__c</fullName>
    <formula>Account__r.APS_Primary_Contact_Email__c</formula>
    <label>Existing APS Email</label>
    <type>Text</type>
</CustomField>