force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_APS_Menstruators_Served__c.field-meta.xml
<CustomField>
    <fullName>Existing_APS_Menstruators_Served__c</fullName>
    <formula>Account__r.Menstruators_Served_Monthly__c</formula>
    <label>Existing APS Menstruators Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>