force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_APS_Partner_Agencies__c.field-meta.xml
<CustomField>
    <fullName>Existing_APS_Partner_Agencies__c</fullName>
    <formula>Account__r.APS_Partner_Agencies_This_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing APS Partner Agencies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>