force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_APS_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Existing_APS_Primary_Contact__c</fullName>
    <formula>Account__r.APS_Primary_Contact__r.FirstName + &quot; &quot; +  Account__r.APS_Primary_Contact__r.LastName</formula>
    <label>Existing APS Primary Contact</label>
    <type>Text</type>
</CustomField>