force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_APS_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Existing_APS_Program_Name__c</fullName>
    <formula>Account__r.APS_Program_Name__c</formula>
    <label>Existing APS Program Name</label>
    <type>Text</type>
</CustomField>