force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_APS_Units_Per_Ind__c.field-meta.xml
<CustomField>
    <fullName>Existing_APS_Units_Per_Ind__c</fullName>
    <formula>Account__r.APS_Units_Per_Individual_Monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing APS Units Per Ind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>