force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Existing_Billing_Address__c</fullName>
    <formula>Account__r.BillingStreet + BR() +
 Account__r.BillingCity +&quot;, &quot; +  Account__r.BillingState + &quot; &quot; +  Account__r.BillingPostalCode</formula>
    <label>Existing Billing Address</label>
    <type>Text</type>
</CustomField>