force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Children_Served_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Existing_Children_Served_Monthly__c</fullName>
    <formula>Account__r.Children_Served_Monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Children Served Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>