force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Cloth_Diapers__c.field-meta.xml
<CustomField>
    <fullName>Existing_Cloth_Diapers__c</fullName>
    <formula>Account__r.Cloth_Diapers_Provided__c</formula>
    <label>Existing Cloth Diapers</label>
    <type>Checkbox</type>
</CustomField>