force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Diaper_Per_Child_Mthly__c.field-meta.xml
<CustomField>
    <fullName>Existing_Diaper_Per_Child_Mthly__c</fullName>
    <formula>Account__r.Diapers_Per_Child_Monthly__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Diaper Per Child Mthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>