force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Existing_Distribution_Method__c</fullName>
    <formula>TEXT( Account__r.Distribution_Method__c )</formula>
    <label>Existing Distribution Method</label>
    <type>Text</type>
</CustomField>