force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Partner_Agencies_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Existing_Partner_Agencies_This_Year__c</fullName>
    <formula>Account__r.NDBN_Partner_Agencies_Served_this_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Partner Agencies This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>