force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Phone__c.field-meta.xml
<CustomField>
    <fullName>Existing_Phone__c</fullName>
    <formula>Account__r.Phone</formula>
    <label>Existing Phone</label>
    <type>Text</type>
</CustomField>