force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Existing_Primary_Contact__c</fullName>
    <formula>Account__r.npe01__One2OneContact__r.FirstName + &quot; &quot; +  Account__r.npe01__One2OneContact__r.LastName</formula>
    <label>Existing Primary Contact</label>
    <type>Text</type>
</CustomField>