force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Existing_Primary_Contact_Email__c</fullName>
    <formula>Account__r.Primary_Contact_Email__c</formula>
    <label>Existing Primary Contact Email</label>
    <type>Text</type>
</CustomField>