force-app/main/default/objects/Account_Edit_Request__c/fields/Existing_Warehouse_Type__c.field-meta.xml
<CustomField>
    <fullName>Existing_Warehouse_Type__c</fullName>
    <formula>TEXT(Account__r.Warehouse_Type__c)</formula>
    <label>Existing Warehouse Type</label>
    <type>Text</type>
</CustomField>