force-app/main/default/objects/Account_Edit_Request__c/fields/New_APS_Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>New_APS_Distribution_Method__c</fullName>
    <label>New APS Distribution Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agencies</fullName>
                <color>#FFFFFF</color>
                <label>Agencies</label>
            </value>
            <value>
                <fullName>Individuals</fullName>
                <color>#FFFFFF</color>
                <label>Individuals</label>
            </value>
            <value>
                <fullName>Both</fullName>
                <color>#FFFFFF</color>
                <label>Both</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>