force-app/main/default/objects/Account_Edit_Request__c/fields/New_APS_Partner_Agencies_Value__c.field-meta.xml
<CustomField>
    <fullName>New_APS_Partner_Agencies_Value__c</fullName>
    <label>New APS Partner Agencies Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>