force-app/main/default/objects/Account_Edit_Request__c/fields/New_APS_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_APS_Primary_Contact__c</fullName>
    <label>New APS Primary Contact First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>