force-app/main/default/objects/Account_Edit_Request__c/fields/New_APS_Product_Types_Value__c.field-meta.xml
<CustomField>
    <fullName>New_APS_Product_Types_Value__c</fullName>
    <label>New APS Product Types Value</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pads</fullName>
                <color>#FFFFFF</color>
                <label>Pads</label>
            </value>
            <value>
                <fullName>Liners</fullName>
                <color>#FFFFFF</color>
                <label>Liners</label>
            </value>
            <value>
                <fullName>Tampons</fullName>
                <color>#FFFFFF</color>
                <label>Tampons</label>
            </value>
            <value>
                <fullName>Reusable Cup</fullName>
                <color>#FFFFFF</color>
                <label>Reusable Cup</label>
            </value>
            <value>
                <fullName>Reusable Cloth Pads</fullName>
                <color>#FFFFFF</color>
                <label>Reusable Cloth Pads</label>
            </value>
            <value>
                <fullName>Other Item Not Listed</fullName>
                <color>#FFFFFF</color>
                <label>Other Item Not Listed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>