force-app/main/default/objects/Account_Edit_Request__c/fields/New_APS_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>New_APS_Program_Name__c</fullName>
    <label>New APS Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>