force-app/main/default/objects/Account_Edit_Request__c/fields/New_APS_Units_Per_Individual_Monthly__c.field-meta.xml
<CustomField>
    <fullName>New_APS_Units_Per_Individual_Monthly__c</fullName>
    <label>New APS Units Per Individual Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>