force-app/main/default/objects/Account_Edit_Request__c/fields/New_APS_Website__c.field-meta.xml
<CustomField>
    <fullName>New_APS_Website__c</fullName>
    <label>New APS Website</label>
    <type>Url</type>
</CustomField>