force-app/main/default/objects/Account_Edit_Request__c/fields/New_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_City__c</fullName>
    <label>New Billing City</label>
    <length>25</length>
    <type>Text</type>
</CustomField>