force-app/main/default/objects/Account_Edit_Request__c/fields/New_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_State__c</fullName>
    <label>New Billing State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>