force-app/main/default/objects/Account_Edit_Request__c/fields/New_Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_Street__c</fullName>
    <label>New Billing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>