force-app/main/default/objects/Account_Edit_Request__c/fields/New_Billing_Zip__c.field-meta.xml
<CustomField>
    <fullName>New_Billing_Zip__c</fullName>
    <label>New Billing Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>