force-app/main/default/objects/Account_Edit_Request__c/fields/New_Children_Served_Monthly__c.field-meta.xml
<CustomField>
    <fullName>New_Children_Served_Monthly__c</fullName>
    <label>New Children Served Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>