force-app/main/default/objects/Account_Edit_Request__c/fields/New_Cloth_Diapers_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Cloth_Diapers_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Cloth Diapers Value</label>
    <type>Checkbox</type>
</CustomField>