force-app/main/default/objects/Account_Edit_Request__c/fields/New_Diapers_Per_Child_Monthly__c.field-meta.xml
<CustomField>
    <fullName>New_Diapers_Per_Child_Monthly__c</fullName>
    <label>New Diapers Per Child Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>