force-app/main/default/objects/Account_Edit_Request__c/fields/New_Menstruators_Served_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Menstruators_Served_Value__c</fullName>
    <label>New Menstruators Served Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>