force-app/main/default/objects/Account_Edit_Request__c/fields/New_Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>New_Primary_Contact_Email__c</fullName>
    <label>New Primary Contact Email</label>
    <type>Email</type>
</CustomField>