force-app/main/default/objects/Account_Edit_Request__c/fields/New_Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_City__c</fullName>
    <label>New Shipping City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>