force-app/main/default/objects/Account_Edit_Request__c/fields/New_Shipping_state__c.field-meta.xml
<CustomField>
    <fullName>New_Shipping_state__c</fullName>
    <label>New Shipping state</label>
    <length>2</length>
    <type>Text</type>
</CustomField>