force-app/main/default/objects/Account_Edit_Request__c/fields/New_Warehouse_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Warehouse_Type__c</fullName>
    <label>New Warehouse Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>