force-app/main/default/objects/Account_Edit_Request__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Edit Requests</relationshipLabel>
    <relationshipName>Account_Edit_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>