force-app/main/default/objects/Account_Edit_Request__c/validationRules/New_APS_Primary_Contact_Name_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>New_APS_Primary_Contact_Name_Field</fullName>
    <active>true</active>
    <errorConditionFormula>OR( 
    AND(/* When Firstname but not Lastname and email*/
        ISBLANK( New_APS_Primary_Contact_Email__c),
        NOT(ISBLANK(New_APS_Primary_Contact__c)),
        ISBLANK( New_APS_Primary_Contact_Last_Name__c)
        ),
    AND(/* When Lastname but not Firstname and email*/
        ISBLANK(New_APS_Primary_Contact_Email__c),
        NOT(ISBLANK( New_APS_Primary_Contact_Last_Name__c)),
        ISBLANK(New_APS_Primary_Contact__c)
    ),
    AND(/* When Lastname and email but not Firstname*/
        NOT(ISBLANK( New_APS_Primary_Contact_Last_Name__c)),
        ISBLANK(New_APS_Primary_Contact__c),
        NOT(ISBLANK( New_APS_Primary_Contact_Email__c))
    ),
    AND(/* When Email and first name but not last name*/
        ISBLANK( New_APS_Primary_Contact_Last_Name__c), 
        NOT(ISBLANK(New_APS_Primary_Contact__c)),
        NOT(ISBLANK( New_APS_Primary_Contact_Email__c))
    ),
        AND(/* When firstname and lastname but not email*/
        ISBLANK( New_APS_Primary_Contact_Email__c), 
        NOT(ISBLANK(New_APS_Primary_Contact__c)),
        NOT(ISBLANK( New_APS_Primary_Contact_Last_Name__c))
    )
)</errorConditionFormula>
    <errorMessage>New APS Primary Contact Email, New APS Primary Contact First Name, and New APS Primary Contact Last Name fields must be populated.</errorMessage>
</ValidationRule>